--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   font_awesome_flutter: ^10.1.0
+  google_fonts: ^2.3.2
+  firebase: ^9.0.2
+  firebase_auth: ^3.3.16
+  cloud_firestore: ^3.1.13
+  firebase_core: ^1.15.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/img/
+  # assets:
+  #   - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
